--- a/aboutPageStyles.css
+++ b/aboutPageStyles.css
@@ -1,35 +1,36 @@
 .start-content {
-  max-width: 80%;
+  max-width: 100%;
   margin: 0 auto;
   text-align: left;
   text-decoration: none;
-  
+  /* padding-left: 5%; */
+
 }
 
 a[href*="index.html"] {
   color: black;
   text-decoration: none;
-} 
+}
 
 
 
 .subheader {
-padding: 2% 0 2% 0;
-border-radius: 10px;
-color: #fff;
+  padding: 2% 0 2% 0;
+  border-radius: 10px;
+  color: #fff;
   background-color: #4b7685;
 }
 
-  .text-container2 {
-    background-color: rgb(253, 252, 252);
-      color: rgb(19, 18, 18);
-      padding-top: 0;
-    }
+.text-container2 {
+  background-color: rgb(253, 252, 252);
+  color: rgb(19, 18, 18);
+  padding-top: 0;
+}
 
-    .subtitle {
-    border: 1px;
-    border-color: grey;
-    border-radius: 1px;
+.subtitle {
+  border: 1px;
+  border-color: grey;
+  border-radius: 1px;
 }
 
 
@@ -41,93 +42,72 @@ ul {
   letter-spacing: .5pt;
 }
 
-
+/* Dropdown List */
 .dropList {
-    padding: 2% 0 3% 0;
-    height: 550px;
+  padding: 2% 0 3% 0;
+  height: 550px;
 }
-/* html,body {
-    width: 100%;
-    height: 100%;
-  }
-  
-  body {
-    font-family: 'Open Sans', sans-serif;
-  } */
-  
-  .rolldown-list {
-    color: #fff;  
-    text-align: center;
-    padding: 0;
-    margin: 0;
-    /* padding-bottom: 50px; */
-  }
-  
-  .rolldown-list li {
-    padding: 1em;
-    margin-bottom: .125em;
-    display: block;
-    list-style: none;
-    text-transform: uppercase;
-  }
-  
-  .rolldown-list li {
-    visibility: hidden;
-    animation: rolldown 3s 1;
-    transform-origin: 50% 0;
-    animation-fill-mode: forwards;
-    animation-delay: s;   /* check this */
-  }
-  
-  .rolldown-list li:nth-child(2n) {
-    background-color: #444;
-  }
-  
-  .rolldown-list li:nth-child(2n+1) {
-    background-color: #333;
-  }
-  
-  #myList {
-    position: absolute;
-    width: 50%; 
-    left: 50%;
-    margin-left: -25%;
-  }
-/*   
-  #btnReload {
-    float: right;
-    color: #333;
-    background: #ccc;
-    text-transform: uppercase;
-    border: none;
-    padding: .5em 1em;
-  }
-  
-  #btnReload:hover {
-    background: #ddd;
-  } */
-  
-  /* .list-items {
-  padding-left: 20%;
-  padding-right: 20%;
-  padding-bottom: 3%;
-  letter-spacing: .5pt;
-} */
 
-  @keyframes rolldown {
-    0% {
-      visibility: visible;
-      transform: rotateX(180deg) perspective(500px);
-    }
-    70% {
-      visibility: visible;
-      transform: rotateX(-30deg);
-    }
-    100% {
-      visibility: visible;
-      transform: rotateX(0deg);
-    }
+
+
+.rolldown-list {
+  color: #fff;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+
+.rolldown-list li {
+  padding: 1em;
+  margin-bottom: .125em;
+  display: block;
+  list-style: none;
+  text-transform: uppercase;
+}
+
+.rolldown-list li {
+  visibility: hidden;
+  animation: rolldown 3s 1;
+  transform-origin: 50% 0;
+  animation-fill-mode: forwards;
+  animation-delay: s;
+  /* check this */
+}
+
+.rolldown-list li:nth-child(2n) {
+  background-color: #444;
+}
+
+.rolldown-list li:nth-child(2n+1) {
+  background-color: #333;
+}
+
+#myList {
+  position: absolute;
+  width: 50%;
+  left: 50%;
+  margin-left: -25%;
+}
+
+
+
+@keyframes rolldown {
+  0% {
+    visibility: visible;
+    transform: rotateX(180deg) perspective(500px);
   }
+
+  70% {
+    visibility: visible;
+    transform: rotateX(-30deg);
+  }
+
+  100% {
+    visibility: visible;
+    transform: rotateX(0deg);
+  }
+}
+
 
   /* @import url('https://fonts.googleapis.com/css?family=Montserrat:700'); */
 
